# bookkeeper

./: CMakeLists.txt  LICENSE  README.md
bookkeeper/: CMakeLists.txt
bookkeeper/include/: server.hpp  session.hpp
bookkeeper/src/: main.cpp
client/: CMakeLists.txt
client/include/: client.hpp  session.hpp
client/src/: main.cpp
etc/cert/: server.cert  server.key
libraries/: CMakeLists.txt
libraries/network/: CMakeLists.txt
libraries/network/include/network/: channel.hpp  stream.hpp
